fixed button alignment

--- a/source/css/scss/objects/_buttons.scss
+++ b/source/css/scss/objects/_buttons.scss
@@ -55,7 +55,7 @@
 \*------------------------------------*/
 
 	.btn--drop-down {
-		display: flex;
+		display: inline-flex;
 		margin: 1em;
 		text-align: center;
 		padding: .3rem .5rem .3rem 1rem;
