--- a/source/css/scss/objects/_header.scss
+++ b/source/css/scss/objects/_header.scss
@@ -101,7 +101,7 @@
 
 
 .row--input_submit{
-	padding: 1rem 3rem 0;
+	  align-self: baseline;
 
 	.btn{
 		background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#014a7d), to(#3399cc));
